Add equivalent products
