# app/api/api.yaml
@@ -157,6 +157,35 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /products/{ParamProductID}/equivalents:
+    get:
+      tags:
+        - products
+      parameters:
+        - $ref: '#/components/parameters/ParamProductID'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref:  '#/components/schemas/EquivalentProduct'
+        "400":
+          description: Bad Request
+          content:
+            application/problem+json:
+              schema:
+                # We should use the constraint validation error but we are not handling it right now
+                $ref: '#/components/schemas/Error'
+        "500":
+          description: Internal Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /users/{ParamUserID}/recipes:
     get:
       tags:
@@ -543,6 +572,33 @@ components:
         - $ref: '#/components/schemas/ProductID'
         - $ref: '#/components/schemas/ProductProperties'
         - $ref: '#/components/schemas/ProductRequiredProperties'
+
+    EquivalentProductProperties:
+      type: object
+      properties:
+        product:
+          description: Equivalent product
+          $ref: '#/components/schemas/Product'
+        score:
+          description: Equivalency score
+          type: number
+          format: float
+          example: 0.9
+        nutrition_facts_100_diff:
+          description: Nutrition facts differences
+          $ref: '#/components/schemas/NutritionFacts'
+    EquivalentProductRequiredProperties:
+      type: object
+      required:
+        - product
+        - score
+        - nutrition_facts_100_diff
+    EquivalentProduct:
+      type: object
+      description: "A product equivalent to other product"
+      allOf:
+        - $ref: '#/components/schemas/EquivalentProductProperties'
+        - $ref: '#/components/schemas/EquivalentProductRequiredProperties'
 
     RecipeProperties:
       type: object
